--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "reactflow": "^11.10.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
