--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/storage": "^0.12.2",
     "@grapesjs/react": "^1.0.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
