--- a/Engine/requirements.txt
+++ b/Engine/requirements.txt
@@ -1,355 +1,150 @@
-0x-contract-addresses==3.0.0
-0x-contract-artifacts==3.0.0
-0x-json-schemas==2.1.0
-0x-order-utils==4.0.1
-absl-py==2.0.0
-aiohttp==3.9.1
+aiohttp==3.9.3
 aiosignal==1.3.1
-altair==5.2.0
 annotated-types==0.6.0
-anyio==3.7.1
-appdirs==1.4.4
-apturl==0.5.2
+anyio==4.3.0
 asgiref==3.7.2
-asttokens==2.4.1
-astunparse==1.6.3
 async-timeout==4.0.3
-attrs==23.1.0
-backcall==0.2.0
+attrs==23.2.0
 backoff==2.2.1
-base58==2.1.1
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
-beniget==0.4.1
-bitarray==2.9.2
 blinker==1.7.0
-Brlapi==0.8.3
-Brotli==1.0.9
 bs4==0.0.2
-cachetools==5.3.2
-cbor2==5.6.1
-certifi==2020.6.20
-cffi==1.16.0
-chardet==4.0.0
+build==1.1.1
+cachetools==5.3.3
+certifi==2024.2.2
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
-chromadb==0.4.21
-chrome-gnome-shell==0.0.0
+chromadb==0.4.24
 click==8.1.7
-colorama==0.4.4
 coloredlogs==15.0.1
-comm==0.2.0
-command-not-found==0.3
-contourpy==1.2.0
-cryptography==3.4.8
-cupshelpers==1.0
-curl_cffi==0.6.0b9
-cycler==0.12.1
-cytoolz==0.12.3
-dacite==1.8.1
-dataclasses-json==0.6.3
-dbus-python==1.2.18
-debugpy==1.8.0
-decorator==5.1.1
-defer==1.0.6
+dataclasses-json==0.6.4
 Deprecated==1.2.14
 dirtyjson==1.0.8
-distlib==0.3.7
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-dm-tree==0.1.8
-dnspython==2.4.2
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-docstring-inheritance==2.1.2
-docx2txt==0.8
-duckduckgo_search==4.4
-duplicity==0.8.21
-eth-abi==2.2.0
-eth-account==0.5.9
-eth-hash==0.6.0
-eth-keyfile==0.5.1
-eth-keys==0.3.4
-eth-rlp==0.2.1
-eth-typing==2.3.0
-eth-utils==1.9.5
+distro==1.9.0
+dnspython==2.6.1
 exceptiongroup==1.2.0
-executing==2.0.1
-fastapi==0.105.0
-fasteners==0.14.1
+fastapi==0.110.0
 filelock==3.13.1
-Flask==3.0.1
-Flask-Login==0.6.3
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==3.1.1
-flatbuffers==23.5.26
-fonttools==4.46.0
+Flask==3.0.2
+flatbuffers==24.3.7
 frozenlist==1.4.1
-fs==2.4.12
-fsspec==2023.12.2
-future==0.18.2
-gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.40
+fsspec==2024.3.0
 google-ai-generativelanguage==0.4.0
-google-api-core==2.15.0
-google-auth==2.25.2
-google-auth-oauthlib==1.1.0
+google-api-core==2.17.1
+google-auth==2.28.2
 google-generativeai==0.3.2
-google-pasta==0.2.0
-googleapis-common-protos==1.62.0
+googleapis-common-protos==1.63.0
 greenlet==3.0.3
-grip==4.6.2
-grpcio==1.60.0
-grpcio-status==1.60.0
-gwebsockets==0.7
-gyp==0.1
+grpcio==1.62.1
+grpcio-status==1.62.1
 h11==0.14.0
-h5py==3.10.0
-hexbytes==0.3.1
-html5lib==1.1
-httpcore==1.0.2
-httplib2==0.20.2
+httpcore==1.0.4
 httptools==0.6.1
-httpx==0.26.0
-huggingface-hub==0.20.1
+httpx==0.27.0
+huggingface-hub==0.21.4
 humanfriendly==10.0
-idna==3.3
-imageio==2.33.1
-imageio-ffmpeg==0.4.9
+idna==3.6
 importlib-metadata==6.11.0
-importlib-resources==6.1.1
-ipfshttpclient==0.8.0a2
-ipykernel==6.27.1
-ipython==8.18.1
+importlib_resources==6.3.1
 itsdangerous==2.1.2
-jedi==0.19.1
-jeepney==0.7.1
-Jinja2==3.1.2
+Jinja2==3.1.3
 joblib==1.3.2
-jsonpatch==1.33
-jsonpointer==2.4
-jsonschema==3.2.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-keras==2.15.0
-keyring==23.5.0
-kiwisolver==1.4.5
-kubernetes==28.1.0
-langchain-community==0.0.16
-langchain-core==0.1.17
-langchain-google-genai==0.0.6
-langsmith==0.0.85
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy_loader==0.3
-libclang==16.0.6
-llama-index-agent-openai==0.1.1
+kubernetes==29.0.0
+llama-index==0.10.20
+llama-index-agent-openai==0.1.5
+llama-index-cli==0.1.9
 llama-index-core==0.10.20.post2
 llama-index-embeddings-gemini==0.1.4
-llama-index-embeddings-openai==0.1.1
+llama-index-embeddings-openai==0.1.6
+llama-index-indices-managed-llama-cloud==0.1.4
 llama-index-legacy==0.9.48
 llama-index-llms-gemini==0.1.5
-llama-index-llms-openai==0.1.1
-llama-index-multi-modal-llms-openai==0.1.1
-llama-index-program-openai==0.1.1
-llama-index-question-gen-openai==0.1.1
-llama-index-readers-file==0.1.3
+llama-index-llms-openai==0.1.12
+llama-index-multi-modal-llms-openai==0.1.4
+llama-index-program-openai==0.1.4
+llama-index-question-gen-openai==0.1.3
+llama-index-readers-file==0.1.11
+llama-index-readers-llama-parse==0.1.3
+llama-index-vector-stores-chroma==0.1.6
+llama-parse==0.3.9
 llamaindex-py-client==0.1.13
-lockfile==0.12.2
-louis==3.20.0
-lru-dict==1.3.0
-lxml==5.1.0
-lz4==3.1.3+dfsg
-macaroonbakery==1.3.1
-Mako==1.1.3
-Markdown==3.5.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-ml-dtypes==0.2.0
-mmh3==4.0.1
+MarkupSafe==2.1.5
+marshmallow==3.21.1
+mmh3==4.1.0
 monotonic==1.6
-more-itertools==8.10.0
-MouseInfo==0.1.3
 mpmath==1.3.0
-multiaddr==0.0.9
-multidict==6.0.4
-mypy_extensions==0.4.4
-namex==0.0.7
+multidict==6.0.5
+mypy-extensions==1.0.0
 nest-asyncio==1.6.0
-netaddr==1.2.1
-netifaces==0.11.0
 networkx==3.2.1
 nltk==3.8.1
-numpy==1.26.2
+numpy==1.26.4
 oauthlib==3.2.2
-olefile==0.46
-onnxruntime==1.16.3
-openai==1.6.1
-opencv-python==4.9.0.80
-opentelemetry-api==1.22.0
-opentelemetry-exporter-otlp-proto-common==1.22.0
-opentelemetry-exporter-otlp-proto-grpc==1.22.0
-opentelemetry-instrumentation==0.43b0
-opentelemetry-instrumentation-asgi==0.43b0
-opentelemetry-instrumentation-fastapi==0.43b0
-opentelemetry-proto==1.22.0
-opentelemetry-sdk==1.22.0
-opentelemetry-semantic-conventions==0.43b0
-opentelemetry-util-http==0.43b0
-opt-einsum==3.3.0
-overrides==7.4.0
-packaging==23.2
-pandas==2.1.4
-paramiko==2.9.3
-parsimonious==0.8.1
-parso==0.8.3
-path-and-address==2.0.1
-pexpect==4.8.0
-pickleshare==0.7.5
+onnxruntime==1.17.1
+openai==1.14.1
+opentelemetry-api==1.23.0
+opentelemetry-exporter-otlp-proto-common==1.23.0
+opentelemetry-exporter-otlp-proto-grpc==1.23.0
+opentelemetry-instrumentation==0.44b0
+opentelemetry-instrumentation-asgi==0.44b0
+opentelemetry-instrumentation-fastapi==0.44b0
+opentelemetry-proto==1.23.0
+opentelemetry-sdk==1.23.0
+opentelemetry-semantic-conventions==0.44b0
+opentelemetry-util-http==0.44b0
+orjson==3.9.15
+overrides==7.7.0
+packaging==24.0
+pandas==2.2.1
 pillow==10.2.0
-pillow-avif-plugin==1.4.3
-platformdirs==4.1.0
-ply==3.11
-posthog==3.1.0
-prompt-toolkit==3.0.41
+posthog==3.5.0
 proto-plus==1.23.0
 protobuf==4.25.3
-psutil==5.9.6
-ptyprocess==0.7.0
-pulsar-client==3.3.0
-pure-eval==0.2.2
-pyarrow==14.0.2
+pulsar-client==3.4.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
-PyAutoGUI==0.9.54
-pycairo==1.20.1
-pycparser==2.21
-pycryptodome==3.20.0
-pycups==2.0.1
-pydantic==2.5.3
-pydantic_core==2.14.6
-pydeck==0.8.1b0
-pyee==9.1.1
-pygame==2.1.2
-PyGetWindow==0.0.9
-Pygments==2.17.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-pymerkle==2.0.2
-pymongo==4.6.1
-PyMsgBox==1.0.9
-PyMuPDF==1.23.22
+pydantic==2.6.4
+pydantic_core==2.16.3
+pymongo==4.6.2
+PyMuPDF==1.23.26
 PyMuPDFb==1.23.22
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pypdf==4.0.1
-pyperclip==1.8.2
+pypdf==4.1.0
 PyPika==0.48.9
-PyRect==0.2.0
-pyRFC3339==1.1
-pyrsistent==0.18.1
-PyScreeze==0.1.30
-PySocks==1.7.1
-pysqlite3-binary==0.5.2.post2
-python-apt==2.4.0+ubuntu3
-python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==1.0.0
-python3-xlib==0.15
-pythran==0.10.0
-pytweening==1.0.7
-pytz==2022.1
-pyxdg==0.27
+pyproject_hooks==1.0.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytube==15.0.0
+pytz==2024.1
 PyYAML==6.0.1
-pyzmq==25.1.2
-referencing==0.32.0
-regex==2023.10.3
-reportlab==3.6.8
+regex==2023.12.25
 requests==2.31.0
-requests-oauthlib==1.3.1
-rich==13.7.0
-rlp==2.0.1
-rpds-py==0.16.2
+requests-oauthlib==1.4.0
 rsa==4.9
-safetensors==0.4.1
-scikit-image==0.22.0
-scikit-learn==1.3.2
-scipy==1.11.4
-SecretStorage==3.3.1
 six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
+sniffio==1.3.1
 soupsieve==2.5
-SQLAlchemy==2.0.23
-stack-data==0.6.3
-starlette==0.27.0
-streamlit==1.31.1
-stringcase==1.2.0
+SQLAlchemy==2.0.28
+starlette==0.36.3
+striprtf==0.0.26
 sympy==1.12
-systemd-python==234
 tenacity==8.2.3
-tensorboard==2.15.1
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0.post1
-tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.34.0
-termcolor==2.4.0
-texttable==1.6.4
-thirdweb-contract-wrappers==2.0.4
-thirdweb-eth-account==0.6.6
-thirdweb-sdk==3.1.1
-threadpoolctl==3.2.0
-tifffile==2024.1.30
-tiktoken==0.5.2
-tokenizers==0.15.0
-toml==0.10.2
-toolz==0.12.0
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.0
-transformers==4.36.2
+tiktoken==0.6.0
+tokenizers==0.15.2
+tomli==2.0.1
+tqdm==4.66.2
 typer==0.9.0
 typing-inspect==0.9.0
-typing_extensions==4.9.0
-tzdata==2023.3
-tzlocal==5.2
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufoLib2==0.13.1
-ufw==0.36.1
-unattended-upgrades==0.1
-unicodedata2==14.0.0
-urllib3==1.26.5
-usb-creator==0.3.7
-uvicorn==0.25.0
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
+uvicorn==0.28.0
 uvloop==0.19.0
-validators==0.22.0
-varint==1.0.2
-vboxapi==1.0
-virtualenv==20.25.0
-wadllib==1.3.6
-watchdog==3.0.0
 watchfiles==0.21.0
-wcwidth==0.2.12
-web3==5.27.0
-webencodings==0.5.1
 websocket-client==1.7.0
-websockets==9.1
+websockets==12.0
 Werkzeug==3.0.1
-wget==3.2
-wrapt==1.14.1
-xdg==5
-xkit==0.0.0
+wrapt==1.16.0
 yarl==1.9.4
-zipp==1.0.0
+youtube-transcript-api==0.6.2
+zipp==3.18.1
