--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
-    "reactflow": "^11.10.4"
+    "reactflow": "^11.10.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
